--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "babel-plugin-transform-react-jsx": "^6.8.0",
-    "preact": "^5.6.0"
+    "preact": "^5.6.0",
   },
   "devDependencies": {
     "babel-core": "^6.13.2",
